2001-07-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, src/gnetlist.c, src/g_rc.c: Cleanup and added the
	  ability to have the rc files in a different location using
	  --with-rcdir (was broken recently, now fixed)

	* src/gnetlist.c, src/g_rc.c: More work on getting above to work
	  completely.

        * src/gnetlist.c, i_vars.c, parsecmd.c, s_net.c, s_rename.c:
          Added patch by Dan Mcmahill for 64-bit architectures.
	
2001-07-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, aclocal.m4: got configure script to be more like
	  gschem wrt the guile detection
	
2001-07-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Fixed all the LDFLAGS to be correct (and only link
	  the libraries once)

	* configure.in: Bumped up version to 20010722

	* configure.in: More updates to get cygwin to build right

	* src/Makefile.am: Changed the order in which things are linked
	  (guile last)

2001-07-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/bompp.sh: Added bom pretty printer written by Rolf Fiedler

	* src/annotate.sh: Added script written by JM Routoure and modified
	  by Rolf Fiedler

	* src/unannotate.sh: Added script written by Rolf Fiedler

	* src/bom_xref.sh: Added script written by Rolf Fiedler

2001-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-partlist*.scm: Added part list netlist backend written
	  by MIYAMOTO Takanori

2001-07-05 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.c: Removed the "This is alpha software" message and
	  added the standard gpl/gnu software message

2001-07-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Make sure configure scripts work with autoconf-2.50
	  (had to fix cygwin check), they do not yet work with 2.50

	* Removed all trace of libtool from gnetlist, not required to build

2001-06-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_traverse.c: Added an if check so that buses are ignored
	  (once again).
